--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
